tests/ui/typeck/wrong-ret-type.rs
fn mk_int() -> usize { let i: isize = 3; return i; } //~ ERROR mismatched types
fn main() { }
